swagger doc for find /feed story
